[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/utility",
	"polkadot-parachains/",
	"polkadot-parachains/pallets/parachain-info",
	"polkadot-parachains/pallets/ping",
	"polkadot-parachains/rococo-runtime",
	"polkadot-parachains/shell-runtime",
	"polkadot-parachains/statemint-common",
	"polkadot-parachains/statemint-runtime",
	"polkadot-parachains/statemine-runtime",
	"polkadot-parachains/westmint-runtime",
	"test/runtime",
	"test/runtime-upgrade",
	"test/client",
	"test/service",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
]

[profile.release]
panic = "unwind"
[patch."https://github.com/paritytech/substrate"]
node-template ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-benchmarking ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-support ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-metadata ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-core ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
max-encoded-len ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
max-encoded-len-derive ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-debug-derive ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-externalities ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-std ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-storage ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-runtime-interface ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-runtime-interface-proc-macro ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-tracing ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-wasm-interface ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-io ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-keystore ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-maybe-compressed-blob ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-state-machine ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-panic-handler ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-trie ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-runtime ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-application-crypto ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-arithmetic ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-api ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-api-proc-macro ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-version ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-version-proc-macro ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-test-primitives ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-runtime-client ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-block-builder ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-client-api ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-prometheus-endpoint ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-executor ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-executor-common ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-allocator ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-serializer ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-executor-wasmi ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-executor-wasmtime ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-tasks ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-runtime-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-sandbox ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-wasm-builder ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-tracing ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-rpc-server ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-telemetry ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-tracing-proc-macro ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-block-builder ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-inherents ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-blockchain ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-consensus ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-utils ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-database ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-runtime ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-system ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-system-rpc-runtime-api ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-babe ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-authorship ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-authorship ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-session ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-timestamp ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-timestamp ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-session ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-staking ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-consensus-babe ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-consensus-slots ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-consensus-vrf ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-election-provider-support ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-npos-elections ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-npos-elections-compact ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-utils ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-utils-derive ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-service ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-chain-spec ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-chain-spec-derive ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-babe ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
fork-tree ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-epochs ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-slots ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-uncles ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-keystore ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-network ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-peerset ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-keyring ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-network-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-finality-grandpa ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-network-gossip ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-finality-grandpa ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-chain-spec ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-client-db ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-state-db ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-informant ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-transaction-pool ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-light ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-offchain ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-offchain ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-transaction-pool ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-transaction-graph ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-runtime-transaction-pool ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-rpc-api ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-cli ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-balances ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-transaction-payment ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-offences ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-staking ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-staking-reward-curve ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-consensus-aura ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-client ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-runtime-interface-test-wasm ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-support-procedural ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-support-procedural-tools ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-support-procedural-tools-derive ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-benchmarking-cli ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-template-runtime ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-executive ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-indices ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-system-benchmarking ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-aura ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-grandpa ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-randomness-collective-flip ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-sudo ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-template ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-transaction-payment-rpc-runtime-api ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-transaction-payment-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-basic-authorship ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-proposer-metrics ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-aura ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-frame-rpc-system ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-build-script-utils ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-bench ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-primitives ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-runtime ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-try-runtime ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-assets ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-authority-discovery ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-authority-discovery ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-bounties ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-treasury ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-collective ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-contracts ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-contracts-primitives ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-contracts-proc-macro ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-contracts-rpc-runtime-api ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-democracy ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-scheduler ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-election-provider-multi-phase ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-elections-phragmen ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-gilt ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-identity ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-im-online ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-lottery ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
frame-support-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-membership ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-mmr ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-mmr-primitives ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-multisig ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-offences-benchmarking ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-proxy ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-utility ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-recovery ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-session-benchmarking ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-society ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-tips ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-uniques ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-vesting ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-testing ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-executor ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-browser-testing ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-cli ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-browser-utils ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-inspect ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-contracts-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-mmr-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-babe-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-finality-grandpa-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-sync-state-rpc ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-authority-discovery ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-finality-grandpa-warp-sync ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
try-runtime-cli ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
remote-externalities ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-service-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-frame-cli ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
test-runner-example ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-manual-seal ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
test-runner ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
node-rpc-client ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
chain-spec-builder ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
subkey ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sc-consensus-pow ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-consensus-pow ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-atomic-swap ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-elections ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-example ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-example-offchain-worker ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-example-parallel ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-nicks ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-node-authorization ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-scored-pool ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
pallet-staking-reward-fn ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-api-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-application-crypto-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-arithmetic-fuzzer ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-npos-elections-fuzzer ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-runtime-interface-test ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
sp-runtime-interface-test-wasm-deprecated ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-test-utils-test-crate ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
substrate-frame-rpc-support ={git = "https://github.com//paritytech/substrate" ,branch = "bkchr-transaction-pool-ready-at" }
